--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/router": "3.2.1",
+    "angular2-cool-storage": "^1.1.0",
     "angular2-jwt": "^0.1.25",
-    "angular2-localstorage": "^0.4.0",
     "angular2-toaster": "^1.1.0",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
