--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "angular2-toaster": "^1.1.0",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
+    "socket.io-client": "^1.7.2",
+    "socketio-wildcard": "^0.3.0",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
   },
@@ -32,6 +34,7 @@
     "@angular/compiler-cli": "2.2.1",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
+    "@types/socket.io-client": "^1.4.29",
     "angular-cli": "1.0.0-beta.21",
     "codelyzer": "~1.0.0-beta.3",
     "jasmine-core": "2.5.2",
